--- a/beauty_clinic_management/views/dental_invoice_view.xml
+++ b/beauty_clinic_management/views/dental_invoice_view.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_post']" position="after">
-                	<button name="financial_agreement_action_inherit1" type="object" states="open" string="Financing Agreement" class="oe_highlight"/>
+                	<button name="financial_agreement_action_inherit1" type="object" invisible="state not in ['open']" string="Financing Agreement" class="oe_highlight"/>
                 </xpath>
             </field>
         </record>
